added news module

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 	<li> more quickcrete</li>
 	<li>sand</li>
 </ul>	
+	
+	<module-two>
+	<div>my awesome news module</div>
+	</module-two>
 </body>
 </html>
